static/vashistha_style.css
/* slim down subnav; adapted from td_nav.  */
#rt_nav {
/* background: url('../../dryrub/images/bg_tdNav2.png') no-repeat top left;
    height: 42px; */
    background: rgba(105,165,159,.17);
    padding: 14px 0;
    margin-bottom: 30px;
    margin-top: -15px;
    border-bottom: 1px dashed #dcdcd8;
    }

#rt_nav ul {
    margin-right: 25px;
    }

#rt_nav li {
    float:left;
    border-right: 1px solid #cacdce;
    padding: 0 15px;
    line-height: 15px;
    text-align: center;
    }

#rt_nav li.last, .content-header-links li.last {
    border-right: none;
    padding-right: 0;
    }

#rt_nav li.first{
    margin-left: 25px;
    }

#rt_nav li:hover {
   background-color: #FFF;
   padding: 0 15px;
}

#rt_nav li.current {
    font-weight: bold;
}

.date-field {
    min-width: 90px;
}
.lobbyist-name {
    min-width: 120px;
}

.issue-list, .participant-group {
    column-count: 3;
    -moz-column-count: 3;
    -webkit-column-count: 3;
}

.participant-list h4 {
    border-bottom: 1px dashed #dcdcd8;
}

.participant-group {
    margin-bottom: 20px;
}

.jump-to {
    background: rgba(105,165,159,.17);
    padding: 8px;
    border: 1px solid #dcdcd8;
    margin-bottom: 20px;
}

.object-metadata dd {
    float: none;
    clear: both;
    margin-bottom: 12px;
    width: auto !important;
    text-align: left !important;
}

.included-reg-table h4 {
    margin-top: 20px;
    float: left;
}
.included-reg-table table {
    margin-top: 0 !important;
}
.main-reg-table h3 {
    float: left;
    margin-bottom: 0;
}
.included-reg-table .export-links {
    float: right;
    margin-top: 20px;
}
.main-reg-table .export-links, .pet .export-links {
    float: right;
}
.export-links a.rss-download, .export-links a.csv-download {
    padding-left: 30px;
    background-repeat: no-repeat;
    background-position: 10px 0;
}
.pet table {
    margin-top: 10px !important;
}


/* search styles poached from brisket */
.search-results .result-rows { border-top: 1px dotted #e6e6e4; }
.search-results .result-row { padding: 15px; border-bottom: 1px dotted #e6e6e4; }
.search-results .search-count { font-weight: normal; }
a.result-name { font-size: 145%; display: block; }
.result-type { font-size: 110%; }
.result-photo { float: right; width: 80px; height: 80px; text-align: right; }
.result-photo img { max-width: 100%; max-height: 100%; border: 1px solid #eeeeee; padding: 2px; background: #ffffff; }
.results-drilldown { display: block; margin-top: 5px; font-size: 110%; text-align: right; font-family: Georgia, Times New Roman, Times, serif; font-style: oblique; }
.result-sections { margin-top: 5px; padding-top: 5px; padding-right: 80px; font-family: Georgia, Times New Roman, Times, serif; font-style: oblique; border-top: 1px dotted #cccccc; }
.result-bio { width: 565px; margin-top: 1em; font-family: Georgia, Times New Roman, Times, serif; font-style: oblique; }

/* shrink the search box a bit because the title is huge */
input#id_query {
  background-position: top right;
  width: 230px;
}

.header-padding {
    clear: both;
    margin-top: 10px;
}
.header-search {
    float: right;
}
.header-search .tip {
    margin-bottom: 10px;
}

